deploy: zya-han/zya-han.github.io-private@3e250236f1f14e16c968bfb01f35e5e148773b81

--- a/too-late-3-4/index.html
+++ b/too-late-3-4/index.html
@@ -375,6 +375,10 @@
   
   
   
+    <p class="translation-note" style="text-align: center; font-size: 1em; opacity: 0.7; margin: 2rem;">
+      此篇为韩文版。👉 <a href="/zh/too-late-3-4/">查看中文版</a>
+    </p>
+  
 
 
 
