--- a/too-late-3-3/index.html
+++ b/too-late-3-3/index.html
@@ -409,6 +409,10 @@
   
   
   
+    <p class="translation-note" style="text-align: center; font-size: 1em; opacity: 0.7; margin: 2rem;">
+      此篇为韩文版。👉 <a href="/zh/too-late-3-3/">查看中文版</a>
+    </p>
+  
 
 
 
