deploy: zya-han/zya-han.github.io-private@0b549afb0361dff965acc97affb4a1ec58ca9084

--- a/body-washing/index.html
+++ b/body-washing/index.html
@@ -19,12 +19,12 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="한나라 사람들의 세정제">
 <meta name="twitter:description" content="그 시대 사람들은 지금의 비누나 샴푸, 퐁퐁에 대응하는 물건으로 무엇을 사용했을까요?">
-<meta name="twitter:url" content="https://zya-han.github.io/wash/">
+<meta name="twitter:url" content="https://zya-han.github.io/body-washing/">
 
 <!-- Open Graph -->
 <meta property="og:title" content="한나라 사람들의 세정제">
 <meta property="og:description" content="그 시대 사람들은 지금의 비누나 샴푸, 퐁퐁에 대응하는 물건으로 무엇을 사용했을까요?">
-<meta property="og:url" content="https://zya-han.github.io/wash/">
+<meta property="og:url" content="https://zya-han.github.io/body-washing/">
 <meta property="og:type" content="article">
 <meta property="og:site_name" content="미남과 오컬트와 자살">
 
@@ -206,37 +206,37 @@
     <ul>
         
         <li class="ml-1 mr-1">
-            <a target="_blank" href="https://bsky.app/intent/compose?text=한나라 사람들의 세정제%20https://zya-han.github.io/wash/" onclick="window.open(this.href, 'bluesky-share', 'width=550,height=235');return false;">
+            <a target="_blank" href="https://bsky.app/intent/compose?text=한나라 사람들의 세정제%20https://zya-han.github.io/body-washing/" onclick="window.open(this.href, 'bluesky-share', 'width=550,height=235');return false;">
                 <i class="fa-brands fa-bluesky"></i>
             </a>
         </li>
 
         <li class="ml-1 mr-1">
-            <a target="_blank" href="https://twitter.com/intent/tweet?text=한나라 사람들의 세정제&url=https://zya-han.github.io/wash/" onclick="window.open(this.href, 'twitter-share', 'width=550,height=335');return false;">
+            <a target="_blank" href="https://twitter.com/intent/tweet?text=한나라 사람들의 세정제&url=https://zya-han.github.io/body-washing/" onclick="window.open(this.href, 'twitter-share', 'width=550,height=335');return false;">
                 <i class="fab fa-twitter"></i>
             </a>
         </li>
 
         <li class="ml-1 mr-1">
-            <a target="_blank" href="https://facebook.com/sharer.php?u=https://zya-han.github.io/wash/" onclick="window.open(this.href, 'facebook-share', 'width=550,height=435');return false;">
+            <a target="_blank" href="https://facebook.com/sharer.php?u=https://zya-han.github.io/body-washing/" onclick="window.open(this.href, 'facebook-share', 'width=550,height=435');return false;">
                 <i class="fab fa-facebook-f"></i>
             </a>
         </li>
 
         <li class="ml-1 mr-1">
-            <a target="_blank" href="https://service.weibo.com/share/share.php?title=한나라 사람들의 세정제&url=https://zya-han.github.io/wash/" onclick="window.open(this.href, 'weibo-share', 'width=550,height=235');return false;">
+            <a target="_blank" href="https://service.weibo.com/share/share.php?title=한나라 사람들의 세정제&url=https://zya-han.github.io/body-washing/" onclick="window.open(this.href, 'weibo-share', 'width=550,height=235');return false;">
                 <i class="fab fa-weibo"></i>
             </a>
         </li>
 
         <li class="ml-1 mr-1">
-            <a target="_blank" href="https://t.me/share/url?url=https://zya-han.github.io/wash/&text=한나라 사람들의 세정제" onclick="window.open(this.href, 'telegram-share', 'width=550,height=435');return false;">
+            <a target="_blank" href="https://t.me/share/url?url=https://zya-han.github.io/body-washing/&text=한나라 사람들의 세정제" onclick="window.open(this.href, 'telegram-share', 'width=550,height=435');return false;">
                 <i class="fab fa-telegram"></i>
             </a>
         </li>
 
         <!-- <li class="ml-1 mr-1">
-            <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://zya-han.github.io/wash/" onclick="window.open(this.href, 'width=550,height=435');return false;">
+            <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://zya-han.github.io/body-washing/" onclick="window.open(this.href, 'width=550,height=435');return false;">
                 <i class="fab fa-linkedin-in"></i>
             </a>
         </li> -->
@@ -372,7 +372,7 @@
 <h3 id="여담">여담</h3>
 
 <p>한나라 이후 진<sup>晉</sup>나라로 가면 세정제를 오용(?)한 기록을 찾을 수 있습니다.
-《세설신어》 〈비루〉에 나오는 일화로, 진나라의 귀족 왕돈이 공주와 결혼한 뒤 저택에서 화장실에 갔을 때 시녀들이 손을 씻을 물과 조두<sup>澡豆</sup>를 내어 오자 조두를 물에 타서 마셔 버렸다는 이야기입니다.
+<a href="https://ctext.org/text.pl?node=91888&amp;if=en&amp;show=parallel">《세설신어》 〈비루〉에 나오는 일화</a>로, 진나라의 귀족 왕돈이 공주와 결혼한 뒤 저택에서 화장실에 갔을 때 시녀들이 손을 씻을 물과 조두<sup>澡豆</sup>를 내어 오자 조두를 물에 타서 마셔 버렸다는 이야기입니다.
 여기서 ‘조두’란 곡물 등으로 만든 일종의 가루비누를 말합니다.
 왕돈은 조두가 미숫가루인 줄 알았다고 말했지만, 예전 포스트 〈<a href="/alcohol-and-sex/">“주색” 넘치는 향연</a>〉의 일화를 살펴보면 자존심 센 왕돈이 공주와 일부러 기싸움을 벌인 것 같기도 합니다.</p>
 
