--- a/body-washing/index.html
+++ b/body-washing/index.html
@@ -381,7 +381,7 @@
 <p>이 게시물은 《창작자와 오타쿠를 위한 삼국지 100문 100답》에 응모된 질문에 대한 답변 예시로 작성했습니다. 평소에 삼국지 썰을 풀다가 궁금하셨던 점이 있으면 아래 링크를 참고하여 질문을 남겨 주세요!</p>
 
 <div class="buy-button">
-    <a href="https://zya-han.github.io/sanguozhi-qna/" target="_blank">🙋 질문 남기러 가기 </a>
+    <a href="https://zyahan.blog/sanguozhi-qna/" target="_blank">🙋 질문 남기러 가기 </a>
 </div>
 
 
