deploy: zya-han/zya-han.github.io-private@ada3d67c92668f76c20cbe9f8a8689967db19bfb

--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
         <a href="/page29/">29</a>
       
     
-    <a href="/page2/">Next »</a>
+    <!-- <a href="/page2/">Next »</a> -->
 </div>
 </span>
 </div>
