--- a/page29/index.html
+++ b/page29/index.html
@@ -538,7 +538,7 @@
 
 
 <div class="pagination-inline">
-    <a href="/page28/">« Prev</a>
+    <!-- <a href="/page28/">« Prev</a> -->
     <a href="/">1</a>
     <span class="ellipsis">…</span>
     
