--- a/zh/index.html
+++ b/zh/index.html
@@ -620,7 +620,7 @@
         <a href="/zh/page4/">4</a>
       
     
-    <a href="/zh/page2/">Next »</a>
+    <!-- <a href="/zh/page2/">Next »</a> -->
 </div>
 </span>
 </div>
