--- a/zh/page4/index.html
+++ b/zh/page4/index.html
@@ -508,7 +508,7 @@
 
 
 <div class="pagination-inline">
-    <a href="/zh/page3/">« Prev</a>
+    <!-- <a href="/zh/page3/">« Prev</a> -->
     <a href="/zh">1</a>
     
       <a href="/zh/page2/">2</a>
