deploy: zya-han/zya-han.github.io-private@1b7872564916cedb848bce4d5af2e1ba25d28aa1

--- a/zh/about.html
+++ b/zh/about.html
@@ -12,8 +12,8 @@
 <meta name="description" content="">
 
 
-<meta name="twitter:image" content="https://zyahan.blog/assets/images/cards/chengyun.jpg">
-<meta property="og:image" content="https://zyahan.blog/assets/images/cards/chengyun.jpg">
+<meta name="twitter:image" content="https://zyahan.blog/assets/images/cards/daoyin-tu.jpg">
+<meta property="og:image" content="https://zyahan.blog/assets/images/cards/daoyin-tu.jpg">
 
 <!-- Twitter Card -->
 <meta name="twitter:card" content="summary_large_image">
@@ -208,8 +208,19 @@
 
     <div class="article-post">
     <div class="col-md-8 pr-5">
-<p>周雅. 석륵의 참군. 탐관오리. (아님)</p>
 </div>
+
+<p>我平时喜欢阅读《史记》《汉书》《后汉书》《三国志》，并时不时聊聊里面的内容。</p>
+
+<ul>
+  <li>从2015年开始深入研究《汉书》。</li>
+  <li>自2019年起，以笔名”周雅”撰写有关中国古代汉代的文章。
+    <ul>
+      <li>我的主要兴趣在于，当时的人们和史书作者具体使用了哪些语言表达。</li>
+      <li>我基本上将前四史的文本既视为语言材料，也视为文学作品。</li>
+    </ul>
+  </li>
+</ul>
 
     </div>
 
