--- a/change-vs-henge/index.html
+++ b/change-vs-henge/index.html
@@ -440,6 +440,10 @@
 
 <p>즉, ‘항아’가 ‘상아’로 바뀌어 굳어진 것은 위진남북조와 당송시기가 아니라 명청시기의 소설에서 찾을 수 있는 현상입니다. 항아/상아 이야기가 ‘항아’로서 한반도에 전해진 것은 아마 그 이전의 일이겠지요.</p>
 
+<h3 id="여담">여담</h3>
+
+<p>한반도에서 항아/상아에 대한 기록은 신라시대에서부터 찾을 수 있습니다. 최치원의 〈쌍녀분전기〉에서는 매번 ‘<strong>상아</strong>의 꾀 많음을 선망하여[每羨嫦娥多計校]’라고 했고, 《삼국유사》 권제5 감통제7 〈<a href="https://db.history.go.kr/item/compareViewer.do?levelId=sy_005r_0020_0060_0040">월명사도솔가 찬</a>〉에서는 ‘피리 소리 달빛을 흔들어 <strong>항아</strong>가 멈추네[笛摇明月住姮娥]’라고 했습니다.</p>
+
 <h3 id="참고-문헌">참고 문헌</h3>
 
 <p>📝 吴晓东, 〈<a href="http://iel.cass.cn/ztpd/shyj/zggdsh/202201/t20220104_5386756.shtml">月亮里有兔、蟾蜍、桂而太阳里有乌的神话起源</a>〉, 《中原文化研究》 2021(2), 15–23.</p>
