--- a/fragrance-villain-cao-pi/index.html
+++ b/fragrance-villain-cao-pi/index.html
@@ -333,8 +333,8 @@
 <h3 id="손권에게-작두향을-요구한-조비">손권에게 작두향을 요구한 조비</h3>
 
 <p>《삼국지》 오지2 〈오주전〉 주석에 인용된 《강표전》에 따르면, 위나라 황초2년(221) 황제 조비는 오왕 손권에게 사자를 보내서 여러 가지 귀중한 보물과 희귀한 동물을 바칠 것을 요구했습니다.
-여기서 나열된 보물 중에서 첫 번째로 꼽히는 것이 바로 작두향<sup>雀頭香</sup>이었습니다.
-작두향은 향부자<sup>香附子</sup>라는 향재 겸 약재의 옛 이름입니다.
+여기서 나열된 보물 중에서 첫 번째로 꼽히는 것이 바로 작두향<hanja aria-hidden="true">雀頭香</hanja>이었습니다.
+작두향은 향부자<hanja aria-hidden="true">香附子</hanja>라는 향재 겸 약재의 옛 이름입니다.
 약재로서는 스트레스와 월경통 해소에 효능이 있다고 합니다.
 향재로서는 후한 영제가 궁중에서 피웠다고 알려진 <a href="/imperial-scents/#%ED%95%9C%EA%B1%B4%EB%85%95%EA%B6%81%EC%A4%91%ED%96%A5-%EC%B5%9C%EC%B4%88%EC%9D%98-%EC%A1%B0%ED%96%A5-%EB%A0%88%EC%8B%9C%ED%94%BC">한건녕궁중향</a>에서 두 번째로 많이 들어가는 중요한 재료이기도 합니다.
 조비도 황제가 된 기념으로 영제를 본받아 궁에서 사용할 귀한 향을 개발하고자 한 것이 아닐까요?</p>
