deploy: zya-han/zya-han.github.io-private@f79f7c530aa128e5209583dbbaabbbc70bf214d4

--- a/sanguo-yanyi-03/index.html
+++ b/sanguo-yanyi-03/index.html
@@ -339,7 +339,7 @@
   <p>조조: <strong>내</strong> 마음이 올바르지 못하다… 그러면 <strong>공[公]</strong>은 또 왜 여포만 섬기셨소?</p>
 </blockquote>
 
-<p>조조가 진궁에게 <span class="hanja-word">공<span class="hanja-sup" aria-hidden="true">公</span></span>이라고 존칭을 써 보지만 진궁은 끄떡도 하지 않습니다.</p>
+<p>조조가 진궁에게 <span class="hanja-word" data-hanja="公">공</span>이라고 존칭을 써 보지만 진궁은 끄떡도 하지 않습니다.</p>
 
 <blockquote>
   <p>진궁: 포(布)가 지모는 없어도 <strong>너[你]</strong>처럼 속임수를 쓰거나 음험하지는 않다.</p>
