--- a/aweng/index.html
+++ b/aweng/index.html
@@ -350,7 +350,7 @@
 
 <p>정리하자면 옹(翁)과 ‘할아버지’의 차이는 아래와 같이 요약할 수 있습니다.</p>
 
-<h4 id="고대한어-<span class="hanja-word">옹<span class="hanja-sup" aria-hidden="true">翁</span></span>-<span class="hanja-word">모<span class="hanja-sup" aria-hidden="true">母</span></span>">고대한어 옹(翁)-모(母)</h4>
+<h4 id="고대한어-<span class="hanja-word" data-hanja="翁">옹</span>-<span class="hanja-word" data-hanja="母">모</span>">고대한어 옹(翁)-모(母)</h4>
 
 <ol>
   <li>일차적 용법: 부친-모친 (친족호칭어)</li>
