deploy: zya-han/zya-han.github.io-private@65ecc4285959cd96b1b50e4daadfc5e2a1927314

--- a/sanguo-yanyi-07/index.html
+++ b/sanguo-yanyi-07/index.html
@@ -361,7 +361,7 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <p>나본이 역사책 《삼국지》를 소설 《삼국지통속연의》로 개작할 때 특히 많이 각색된 인물을 꼽는다면 아무래도 제갈량을 빠뜨릴 수 없을 것입니다. 예전에 〈제갈량 vs. 주유, 누가 깃털 부채의 원조인가?〉라는 포스트에서 언급했듯이, 제갈량의 전형적인 아이템으로 통하는 윤건(綸巾)과 우선(羽扇)부터가 연의의 시대에 부여된 설정입니다.</p>
+                <p>나본이 역사책 《삼국지》를 소설 《삼국지통속연의》로 개작할 때 특히 많이 각색된 인물을 꼽는다면 아무래도 제갈량을 빠뜨릴 수 없을 것입니다. 예전에 〈<a href="/feather-fan/">제갈량 vs. 주유, 누가 깃털 부채의 원조인가?</a>〉라는 포스트에서 언급했듯이, 제갈량의 전형적인 아이템으로 통하는 윤건(綸巾)과 우선(羽扇)부터가 연의의 시대에 부여된 설정입니다.</p>
 
 <p>이런 각색은 연의에서 제갈량이 처음으로 등장하는 삼고초려 이벤트에서도 나타납니다. 보통 삼고초려라고 하면 유비가 제갈량을 극진히 받들어 모시는 모습을 상상할 것입니다. 바로 이런 이미지가 연의에서 창조된 것입니다. 《삼국지통속연의》 <a href="https://ctext.org/sanguo-yanyi/ch38#n98305">제38회</a>에서 유비가 제갈량을 어렵게 대면하고 처음으로 꺼낸 말을 들어 봅시다.</p>
 
