deploy: zya-han/zya-han.github.io-private@d8d2a227a619dc52001444af19ba3e3b771cfbbf

--- a/a-brief-history-of-cats/index.html
+++ b/a-brief-history-of-cats/index.html
@@ -563,9 +563,9 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">보요(步搖)라는 머리 장식</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
-마왕퇴 신추 부인의 생전 모습을 재현한 인형을 보면 이마에 드리우는 머리장식을 쓰고 있는데, 이것이 정말 한대에 착용되던 장식인가요? 만약 그렇다면 명칭은 무엇인가요?...</p>
+마왕퇴 신추 부인의 생전 모습을 재현한 인형을 보면 이마에 드리우는 머리장식을 쓰고 있는데, 이것이 정말 한대에 착용되던 장식인가요? 만약 그렇다면 명칭은 무엇인가...</p>
               </div>
             </a>
           </article>
