--- a/armed-women/index.html
+++ b/armed-women/index.html
@@ -361,11 +361,11 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <h2 id="질문">질문</h2>
+                <h2 id="-질문">🙋 질문</h2>
 
 <p>후한 말의 시기에 여성도 호신도구(단검이라든지)를 갖고 다니거나 무술을 익히는 게 보편적이었나요?</p>
 
-<h2 id="답변">답변</h2>
+<h2 id="-답변">💁 답변</h2>
 
 <p>한국에는 “은장도”로 유명한 장도(粧刀)의 전통이 있었습니다. 그런데 중국 한나라에는 이 용도에 상응하는 물건이 보이지 않습니다. 장도와 비슷한 크기로 서도(書刀)라는 칼이 있었으나, 주로 남성 관리가 허리에 차고 다녔고 죽간에서 틀린 글자를 긁어내는 데 사용했다는 점에서 장도와 다릅니다.</p>
 
@@ -533,9 +533,9 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">한나라의 똑똑한 여자들은 어떻게 되었을까?</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
-한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며...</p>
+한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’...</p>
               </div>
             </a>
           </article>
