--- a/body-washing/index.html
+++ b/body-washing/index.html
@@ -361,11 +361,11 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <h2 id="질문">질문</h2>
+                <h2 id="-질문">🙋 질문</h2>
 
 <p>그 시대 사람들은 지금의 비누나 샴푸, 퐁퐁에 대응하는 물건으로 무엇을 사용했을까요?</p>
 
-<h2 id="답변">답변</h2>
+<h2 id="-답변">💁 답변</h2>
 
 <p>그렇습니다.
 아<sup>雅</sup>가 세정제의 역사를 알지는 못하지만 적어도 그 시대에는 비누와 계면활성제가 없었을 것입니다.
@@ -607,9 +607,9 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">“주색“ 넘치는 향연</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
-양부전을 보면, 조홍이 잔치 자리에 무희들을 불러 선정적인 춤을 추게 하자 양부가 ‘남녀가 유별한데 이런 건 부적절하다’라고 대놓고 지적한 일이 그의 강직한 성품을 반...</p>
+양부전을 보면, 조홍이 잔치 자리에 무희들을 불러 선정적인 춤을 추게 하자 양부가 ‘남녀가 유별한데 이런 건 부적절하다’라고 대놓고 지적한 일이 그의 강직한 성품을...</p>
               </div>
             </a>
           </article>
