--- a/feather-fan/index.html
+++ b/feather-fan/index.html
@@ -372,8 +372,8 @@
 <p>결론부터 말하자면 《어림》이라는 책에서 제갈량이 깃털 부채를 가지고 등장하는 것이 현재 찾을 수 있는 가장 이른 기록입니다. 해당 본문을 살펴봅시다.</p>
 
 <blockquote>
-  <p>《어림》에서 인용. <span style="color:red">제갈무후</span>와 선황이 위수 강변에서 전투를 벌이고자 할 때였다. 군복을 입고 사무를 보던 선황은 사람을 시켜 무후의 모습을 정찰하게 했다. 무후는 흰 수레를 타고 갈건과 <strong>깃털 부채</strong> 차림으로 전군을 지휘했고, 모두가 그의 명령을 따랐다. 선황이 이를 전해 듣고 감탄하였다. “명사라고 할 만하구나!” <br>
-《語林》曰：<span style="color:red">諸葛武侯</span>與宣皇，在渭濱，將戰，宣皇戎服蒞事，使人視武侯，乘素輿，葛巾<strong>毛扇</strong>，指麾三軍，皆隨其進止。宣皇聞而歎曰：可謂名士矣。</p>
+  <p>《어림》에서 인용. <span class="person">제갈무후</span>와 선황이 위수 강변에서 전투를 벌이고자 할 때였다. 군복을 입고 사무를 보던 선황은 사람을 시켜 무후의 모습을 정찰하게 했다. 무후는 흰 수레를 타고 갈건과 <strong>깃털 부채</strong> 차림으로 전군을 지휘했고, 모두가 그의 명령을 따랐다. 선황이 이를 전해 듣고 감탄하였다. “명사라고 할 만하구나!” <br>
+《語林》曰：<span class="person">諸葛武侯</span>與宣皇，在渭濱，將戰，宣皇戎服蒞事，使人視武侯，乘素輿，葛巾<strong>毛扇</strong>，指麾三軍，皆隨其進止。宣皇聞而歎曰：可謂名士矣。</p>
 </blockquote>
 
 <p>위수 강변에서 전투를 벌이고 사마의가 제갈량을 정찰했다면 오장원에서의 일이 아닐까 추측해 봅니다. 그렇다면 제갈량의 마지막 북벌인 셈입니다. 북벌을 한두 번 하는 것도 아닌데 무장을 하지 않았다니 확실히 보통 사람은 아닙니다. 이런 모습을 보고 사마의가 ‘명사’라고 감탄한 것을 보면, 《삼국지》의 세계에서 명사들은 군복을 입고 무장을 갖추면 품격이 떨어진다고 여겨졌던 것 같습니다. 원소가 위험한 전장에서 투구를 안 썼다는 것도 같은 맥락이겠지요. 여기서 부채는 명사의 ‘가오’를 위한 아이템이라고 볼 수 있겠습니다.</p>
@@ -387,8 +387,8 @@
 <p>앞서 《어림》에서는 깃털 부채를 든 제갈량이 갈건을 썼었는데, 소식의 〈적벽회고: ‘염노교’ 곡조에 따라〉[念奴嬌赤壁懷古]에서는 주유가 깃털 부채를 들고 윤건을 쓴 채로 등장합니다.</p>
 
 <blockquote>
-  <p>아득히 생각하니 그 해에 <span style="color:red">공근</span>은 소교가 갓 시집왔고 영웅의 풍모 드날렸겠네. <strong>깃털 부채 윤건</strong> 쓰고 담소하는 사이에 돛대도 적병도 연기가 되어 사라지누나. <br>
-遙想<span style="color:red">公瑾</span>當年，小喬初嫁了，雄姿英發。<strong>羽扇綸巾</strong>，談笑間、檣虜灰飛煙滅。</p>
+  <p>아득히 생각하니 그 해에 <span class="person">공근</span>은 소교가 갓 시집왔고 영웅의 풍모 드날렸겠네. <strong>깃털 부채 윤건</strong> 쓰고 담소하는 사이에 돛대도 적병도 연기가 되어 사라지누나. <br>
+遙想<span class="person">公瑾</span>當年，小喬初嫁了，雄姿英發。<strong>羽扇綸巾</strong>，談笑間、檣虜灰飛煙滅。</p>
 </blockquote>
 
 <p>여기에서 깃털 부채와 윤건이 결합했다는 점에 주목해 봅시다. 이것은 《삼국연의》에서 제갈량의 모습을 묘사하는 상용구와 일치합니다. 즉, 《삼국연의》의 ‘우선윤건’은 《어림》의 기록보다는 〈적벽회고〉의 묘사에 더 가깝습니다. 그러므로 《삼국연의》에서 직접적으로 차용한 것은 〈적벽회고〉의 이미지일 수도 있습니다.</p>
@@ -396,11 +396,11 @@
 <p>‘우선윤건’으로 주유를 묘사한 작품은 〈적벽회고〉 이외에도 존재합니다. 〈적벽회고〉가 실린 《<a href="https://ctext.org/wiki.pl?if=en&amp;res=465855">전송사</a>》 전문에서 검색해 보면, 주유를 가리키는 단서가 명백하게 주어진 경우가 적어도 두 건 있습니다.</p>
 
 <blockquote>
-  <p>為大喬、能撥春風，<span style="color:red">小喬</span>妙移箏，雁啼秋水。柳怯雲松，更何必、十發梳洗。道<span style="color:red">郎</span>攜<strong>羽扇</strong>，那日隔簾，半面曾記。</p>
+  <p>為大喬、能撥春風，<span class="person">小喬</span>妙移箏，雁啼秋水。柳怯雲松，更何必、十發梳洗。道<span class="person">郎</span>攜<strong>羽扇</strong>，那日隔簾，半面曾記。</p>
 </blockquote>
 
 <blockquote>
-  <p>應自笑，<span style="color:red">周郎</span>少日，風流<strong>羽扇綸巾</strong>。</p>
+  <p>應自笑，<span class="person">周郎</span>少日，風流<strong>羽扇綸巾</strong>。</p>
 </blockquote>
 
 <p>이외에도 장강을 배경으로 한 작품에서 주유를 가리키는 듯한 표현이 더 있었지만, 송사를 정확하게 해독하는 것은 제가 할 수 있는 범위를 벗어난 일이라서 ‘소교’, ‘주랑’ 등 누가 보아도 확실한 것만 세었습니다. 반면, 제갈량을 가리킨다고 해석할 수 있는 작품은 나오지 않았습니다. 이것도 제가 못 찾은 단서가 있을 수 있지만…</p>
@@ -415,7 +415,7 @@
 
 <blockquote>
   <p>깃털 부채에 윤건을 착용한 이가 있으니 곧 공명이라. <br>
-<strong>羽扇綸巾</strong>一<span style="color:red">孔明</span>。</p>
+<strong>羽扇綸巾</strong>一<span class="person">孔明</span>。</p>
 </blockquote>
 
 <blockquote>
