--- a/idioms-09/index.html
+++ b/idioms-09/index.html
@@ -482,9 +482,9 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">장창과 반초: 한나라의 애처가들</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
-한나라 때 장창이 아내의 눈썹을 그려주었다가 다른 신하들의 탄핵을 받은 적이 있다고 압니다. 그 사유는 남자가 화장품 같은 여성적이라고 인식된 물건에 손을 대서인가요,...</p>
+한나라 때 장창이 아내의 눈썹을 그려주었다가 다른 신하들의 탄핵을 받은 적이 있다고 압니다. 그 사유는 남자가 화장품 같은 여성적이라고 인식된 물건에 손을 대서인가...</p>
               </div>
             </a>
           </article>
