--- a/index.html
+++ b/index.html
@@ -715,15 +715,15 @@
                 <a class="text-dark" href="/body-washing/">한나라 사람들의 세정제</a>
                 
             </h2>
-            <h4 class="card-text">질문
+            <h4 class="card-text">🙋 질문
 
 그 시대 사람들은 지금의 비누나 샴푸, 퐁퐁에 대응하는 물건으로 무엇을 사용했을까요?
 
-답변
+💁 답변
 
 그렇습니다.
 아雅가 세정제의 역사를 알지는 못하지만 적어도 그 시대에는 비누와 계면활성제가 없었을 것입니다.
-그렇다면 한나라 사람들은 몸이나 물...</h4>
+그렇다면 한나라 사람들은 몸...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
