--- a/killing-as-atonement/index.html
+++ b/killing-as-atonement/index.html
@@ -374,7 +374,7 @@
   </li>
   <li><a href="#한서">《한서》</a>
     <ul>
-      <li><a href="#조조晁錯의-죽음">조조</a></li>
+      <li><a href="#조조晁錯의-죽음">조조晁錯의 죽음</a></li>
       <li><a href="#구체적인-살해-묘사">구체적인 살해 묘사</a></li>
     </ul>
   </li>
@@ -416,16 +416,16 @@
 
 <h4 id="이웃-나라에-사죄하기">(이웃) 나라에 사죄하기</h4>
 
-<p>우선 《사기》에서는 시대에 따라 사죄의 대상이 변하는 것을 주목할 만합니다. 먼저, 춘추전국시대부터 서한 초까지는 노<hanja aria-hidden="true">魯</hanja>, 오<hanja aria-hidden="true">吳</hanja> 등 이웃 제후국에게 사과하는 외교적 목적이 있었습니다.</p>
+<p>우선 《사기》에서는 시대에 따라 사죄의 대상이 변하는 것을 주목할 만합니다. 먼저, 춘추전국시대부터 서한 초까지는 <span class="hanja-word" data-hanja="魯">노</span>, <span class="hanja-word" data-hanja="吳">오</span> 등 이웃 제후국에게 사과하는 외교적 목적이 있었습니다.</p>
 
 <blockquote>
-  <p>제<hanja aria-hidden="true">齊</hanja> 양공<hanja aria-hidden="true">襄公</hanja>은 팽생<hanja aria-hidden="true">彭生</hanja>을 죽여[殺] 노<hanja aria-hidden="true">魯</hanja>에 사죄했다.</p>
+  <p><span class="hanja-word" data-hanja="齊">제</span> <span class="hanja-word" data-hanja="襄公">양공</span>은 <span class="hanja-word" data-hanja="彭生">팽생</span>을 죽여[殺] <span class="hanja-word" data-hanja="魯">노</span>에 사죄했다.</p>
 
   <p><cite> 《사기》 〈제태공세가〉 </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>조<hanja aria-hidden="true">錯</hanja>를 베어[斬] 오<hanja aria-hidden="true">吳</hanja>에 사죄해야만 합니다.</p>
+  <p><span class="hanja-word" data-hanja="錯">조</span>를 베어[斬] <span class="hanja-word" data-hanja="吳">오</span>에 사죄해야만 합니다.</p>
 
   <p><cite> 《사기》 〈원앙조조열전〉 </cite></p>
 </blockquote>
@@ -433,7 +433,7 @@
 <p>아래의 예문은 동월 사람들이 한나라의 천자에게 사죄하고자 하는 것이므로 위의 사례와 비슷합니다.</p>
 
 <blockquote>
-  <p>왕을 죽여서[殺] 천자<hanja aria-hidden="true">天子</hanja>에게 사죄하는 것이다.</p>
+  <p>왕을 죽여서[殺] <span class="hanja-word" data-hanja="天子">천자</span>에게 사죄하는 것이다.</p>
 
   <p><cite> 《사기》 〈동월열전〉 </cite></p>
 </blockquote>
@@ -443,13 +443,13 @@
 <p>다음으로 나오는 세 예문은 모두 서한 무제 때입니다. 이제 제후국의 세력은 약해졌고, 사죄 상대는 천하로 확장됩니다.</p>
 
 <blockquote>
-  <p>지금 회<hanja aria-hidden="true">恢</hanja>를 벌하지[誅] 않으면 천하에 사죄할 수 없습니다.</p>
+  <p>지금 <span class="hanja-word" data-hanja="恢">회</span>를 벌하지[誅] 않으면 천하에 사죄할 수 없습니다.</p>
 
   <p><cite> 《사기》 〈한장유열전〉 </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>주보언<hanja aria-hidden="true">主父偃</hanja>을 벌하지[誅] 않으면 천하에 사죄할 수 없습니다.</p>
+  <p><span class="hanja-word" data-hanja="主父偃">주보언</span>을 벌하지[誅] 않으면 천하에 사죄할 수 없습니다.</p>
 
   <p><cite> 《사기》 〈평진후주보열전〉 </cite></p>
 </blockquote>
@@ -472,18 +472,19 @@
 
 <p>《한서》의 경우 위에서 소개한 《사기》의 예문이 그대로 나오고, 추가로 다섯 건이 더 나옵니다. 동사구로 새로 나온 ‘머리를 얻다’와 ‘엎드러 드러내어 륙을 당하다’ 같은 표현은 살해의 방법과 절차를 한층 더 구체적으로 묘사합니다.</p>
 
-<h4 id="조조晁錯의-죽음">조조<hanja aria-hidden="true">晁錯</hanja>의 죽음</h4>
+<h4 id="조조晁錯의-죽음">
+<span class="hanja-word" data-hanja="晁錯">조조</span>의 죽음</h4>
 
-<p>《한서》에서 눈에 띄는 점은 조조<hanja aria-hidden="true">晁錯</hanja>가 네 번이나 죽는다는 것입니다. 오·초 7국의 난을 일으킨 제후국의 요구에 따라 어사대부 조조를 죽인 사건이 조조 자신의 전기 이외에도 세 군데에 더 나와서, 《사기》에서보다 더 중요한 사건으로 다루어지는 것을 알 수 있습니다.</p>
+<p>《한서》에서 눈에 띄는 점은 <span class="hanja-word" data-hanja="晁錯">조조</span>가 네 번이나 죽는다는 것입니다. 오·초 7국의 난을 일으킨 제후국의 요구에 따라 어사대부 조조를 죽인 사건이 조조 자신의 전기 이외에도 세 군데에 더 나와서, 《사기》에서보다 더 중요한 사건으로 다루어지는 것을 알 수 있습니다.</p>
 
 <blockquote>
-  <p>어사대부<hanja aria-hidden="true">御史大夫</hanja> 조조<hanja aria-hidden="true">晁錯</hanja>를 베어[斬] 일곱 제후국에 사죄하였다.</p>
+  <p><span class="hanja-word" data-hanja="御史大夫">어사대부</span> <span class="hanja-word" data-hanja="晁錯">조조</span>를 베어[斬] 일곱 제후국에 사죄하였다.</p>
 
   <p><cite> 《한서》 〈경제기〉 </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>조<hanja aria-hidden="true">錯</hanja>를 베어[斬] 제후들에게 사죄했습니다.</p>
+  <p><span class="hanja-word" data-hanja="錯">조</span>를 베어[斬] 제후들에게 사죄했습니다.</p>
 
   <p><cite> 《한서》 〈가추매노전〉 </cite></p>
 </blockquote>
@@ -499,13 +500,13 @@
 <p>다음으로는 《사기》 이후 서한 후반에 해당하는 새로운 내용입니다. 앞에서 나온 죽이다·베다·벌하다 세 가지에 비해 살해 방법의 묘사가 더 상세해졌습니다. 수사적인 효과를 노린 것 같습니다.</p>
 
 <blockquote>
-  <p>멀리 도망쳤더라도 <strong>그들의 머리를 얻어</strong> [得其頭] 백성<hanja aria-hidden="true">百姓</hanja>에게 사죄해야 합니다.</p>
+  <p>멀리 도망쳤더라도 <strong>그들의 머리를 얻어</strong> [得其頭] <span class="hanja-word" data-hanja="百姓">백성</span>에게 사죄해야 합니다.</p>
 
   <p><cite> 《한서》 〈갑제갈유정손무장하전〉 </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>잘못은 신<hanja aria-hidden="true">臣</hanja> 봉<hanja aria-hidden="true">鳳</hanja>에게 있으니 <strong>엎드려 사람들 앞에서 륙을 당해</strong> [伏顯戮] 천하에 사죄해야 합니다.</p>
+  <p>잘못은 <span class="hanja-word" data-hanja="臣">신</span> <span class="hanja-word" data-hanja="鳳">봉</span>에게 있으니 <strong>엎드려 사람들 앞에서 륙을 당해</strong> [伏顯戮] 천하에 사죄해야 합니다.</p>
 
   <p><cite> 《한서》 〈원후전〉 </cite></p>
 </blockquote>
@@ -521,7 +522,7 @@
 <p>아래의 네 개 예문에서는 죽고 죽이는 방법이 《한서》에서보다도 상세해졌습니다. 단순히 죽인다고만 하던 《사기》에서는 상상하기 어려운 묘사입니다.</p>
 
 <blockquote>
-  <p>수<hanja aria-hidden="true">守</hanja>에게 <strong>북쪽을 향해 목을 자르도록</strong>[北向刎首] 하여 큰 은혜에 사죄해야 합니다.</p>
+  <p><span class="hanja-word" data-hanja="守">수</span>에게 <strong>북쪽을 향해 목을 자르도록</strong>[北向刎首] 하여 큰 은혜에 사죄해야 합니다.</p>
 
   <p><cite> 《후한서》 〈이왕등래열전〉</cite></p>
 </blockquote>
@@ -539,7 +540,7 @@
 </blockquote>
 
 <blockquote>
-  <p>십상시를 <strong>베고</strong>[斬] <strong>남교<hanja aria-hidden="true">南郊</hanja>에 머리를 걸어</strong>[縣頭] 백성에게 사죄하는 것이 옳습니다.</p>
+  <p>십상시를 <strong>베고</strong>[斬] <strong><span class="hanja-word" data-hanja="南郊">남교</span>에 머리를 걸어</strong>[縣頭] 백성에게 사죄하는 것이 옳습니다.</p>
 
   <p><cite> 《후한서》 〈환자열전〉</cite></p>
 </blockquote>
@@ -549,15 +550,15 @@
 <p>또한 《후한서》에서는 죽음으로 사죄하는 상대로 개인이 추가되었습니다.</p>
 
 <blockquote>
-  <p>마침내 처와 봉<hanja aria-hidden="true">鳳</hanja>의 머리를 깎아[髡] [태후에게] 사죄하였다.</p>
+  <p>마침내 처와 <span class="hanja-word" data-hanja="鳳">봉</span>의 머리를 깎아[髡] [태후에게] 사죄하였다.</p>
 
   <p><cite> 《후한서》 〈등구열전〉</cite></p>
 </blockquote>
 
 <blockquote>
-  <p>자살하여[自殺] 기<hanja aria-hidden="true">期</hanja>에게 사죄하였다.</p>
+  <p>자살하여[自殺] <span class="hanja-word" data-hanja="期">기</span>에게 사죄하였다.</p>
 
-  <p><cite> 《후한서》 〈조기왕패제준열전<hanja aria-hidden="true">銚期王霸祭遵列傳</hanja>〉</cite></p>
+  <p><cite> 《후한서》 〈<span class="hanja-word" data-hanja="銚期王霸祭遵列傳">조기왕패제준열전</span>〉</cite></p>
 </blockquote>
 
 <p>심지어 귀신에게까지 사죄합니다.</p>
@@ -589,25 +590,25 @@
 </blockquote>
 
 <blockquote>
-  <p>가충<hanja aria-hidden="true">賈充</hanja>을 벌하여[誅] 천하에 사죄하십시오.</p>
+  <p><span class="hanja-word" data-hanja="賈充">가충</span>을 벌하여[誅] 천하에 사죄하십시오.</p>
 
   <p><cite> 《삼국지》 〈진태전〉 주석 </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>가충<hanja aria-hidden="true">賈充</hanja>을 베는[斬] 것이 있어야 천하에 조금이나마 사죄할 수 있습니다.</p>
+  <p><span class="hanja-word" data-hanja="賈充">가충</span>을 베는[斬] 것이 있어야 천하에 조금이나마 사죄할 수 있습니다.</p>
 
   <p><cite> 《삼국지》 〈진태전〉 주석 </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>태조<hanja aria-hidden="true">太祖</hanja>는 그를 죽여[殺] 유<hanja aria-hidden="true">柔</hanja>에게 사죄했다.</p>
+  <p><span class="hanja-word" data-hanja="太祖">태조</span>는 그를 죽여[殺] <span class="hanja-word" data-hanja="柔">유</span>에게 사죄했다.</p>
 
   <p><cite> 《삼국지》 〈고유전〉 </cite></p>
 </blockquote>
 
 <blockquote>
-  <p>속<hanja aria-hidden="true">謖</hanja>을 륙하여[戮] 사람들[衆]에게 사죄했다.</p>
+  <p><span class="hanja-word" data-hanja="謖">속</span>을 륙하여[戮] 사람들[衆]에게 사죄했다.</p>
 
   <p><cite> 《삼국지》 〈제갈량전〉 </cite></p>
 </blockquote>
