--- a/naming-dogs/index.html
+++ b/naming-dogs/index.html
@@ -704,9 +704,9 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">후한 말 학자들의 개 이야기</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
-삼국시대에도 애완견/사냥개/경비견을 구분해서 활용했을 것 같은데, 페키니즈나 시추처럼 품종 개념도 있었나요? 개를 용도에 따라 전문적으로 훈련시키는 직업도 있었을까요?...</p>
+삼국시대에도 애완견/사냥개/경비견을 구분해서 활용했을 것 같은데, 페키니즈나 시추처럼 품종 개념도 있었나요? 개를 용도에 따라 전문적으로 훈련시키는 직업도 있었을까...</p>
               </div>
             </a>
           </article>
