--- a/page3/index.html
+++ b/page3/index.html
@@ -557,9 +557,9 @@
                 <a class="text-dark" href="/women-s-names-supplement-2/">한대 여성의 이름과 자: 4년 뒤의 보충</a>
                 
             </h2>
-            <h4 class="card-text">질문
+            <h4 class="card-text">🙋 질문
 
-허평군, 곽성군, 왕정군, 탁문군 등 ‘군’이 붙은 여성 이름인명은 당대 유행인가요, 혹은 일종의 존칭처럼 인명 뒤에 ‘군’이 따로 붙은 것인가요? 한 무제의 이부 누이 수성군은 봉호가 확실한 듯한데 왕정군은 이름이 정군이라 해서 헷갈려 ...</h4>
+허평군, 곽성군, 왕정군, 탁문군 등 ‘군’이 붙은 여성 이름인명은 당대 유행인가요, 혹은 일종의 존칭처럼 인명 뒤에 ‘군’이 따로 붙은 것인가요? 한 무제의 이부 누이 수성군은 봉호가 확실한 듯한데 왕정군은 이름이 정군이라 해서 헷갈...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
