--- a/page6/index.html
+++ b/page6/index.html
@@ -411,15 +411,15 @@
                 <a class="text-dark" href="/dogs-in-later-han/">후한 말 학자들의 개 이야기</a>
                 
             </h2>
-            <h4 class="card-text">질문
+            <h4 class="card-text">🙋 질문
 
 삼국시대에도 애완견/사냥개/경비견을 구분해서 활용했을 것 같은데, 페키니즈나 시추처럼 품종 개념도 있었나요? 개를 용도에 따라 전문적으로 훈련시키는 직업도 있었을까요?
 
-답변
+💁 답변
 
 개의 용도별 분류
 
-우선 한나라에서는 경비견과 사냥개를 구별했...</h4>
+우선 한나라에서는 경비견과 사냥개를...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
