--- a/real-zongjiao/index.html
+++ b/real-zongjiao/index.html
@@ -510,14 +510,14 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">한나라 사람들의 세정제</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
 그 시대 사람들은 지금의 비누나 샴푸, 퐁퐁에 대응하는 물건으로 무엇을 사용했을까요?
 
-답변
+💁 답변
 
 그렇습니다.
-아雅가 세정제의 역사를 알지는 못하지만 적어도 그 시대에는 ...</p>
+아雅가 세정제의 역사를 알지는 못하지만 적어도 그 시...</p>
               </div>
             </a>
           </article>
