--- a/women-s-names-supplement-1/index.html
+++ b/women-s-names-supplement-1/index.html
@@ -512,9 +512,9 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">한대 여성의 이름과 자: 4년 뒤의 보충</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
-허평군, 곽성군, 왕정군, 탁문군 등 ‘군’이 붙은 여성 이름인명은 당대 유행인가요, 혹은 일종의 존칭처럼 인명 뒤에 ‘군’이 따로 붙은 것인가요? 한 무제의 이부 누...</p>
+허평군, 곽성군, 왕정군, 탁문군 등 ‘군’이 붙은 여성 이름인명은 당대 유행인가요, 혹은 일종의 존칭처럼 인명 뒤에 ‘군’이 따로 붙은 것인가요? 한 무제의 이부...</p>
               </div>
             </a>
           </article>
