--- a/dogs-in-later-han/index.html
+++ b/dogs-in-later-han/index.html
@@ -361,11 +361,11 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <h2 id="질문">질문</h2>
+                <h2 id="-질문">🙋 질문</h2>
 
 <p>삼국시대에도 애완견/사냥개/경비견을 구분해서 활용했을 것 같은데, 페키니즈나 시추처럼 품종 개념도 있었나요? 개를 용도에 따라 전문적으로 훈련시키는 직업도 있었을까요?</p>
 
-<h2 id="답변">답변</h2>
+<h2 id="-답변">💁 답변</h2>
 
 <h3 id="개의-용도별-분류">개의 용도별 분류</h3>
 
@@ -556,14 +556,14 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">한나라 사람들의 세정제</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
 그 시대 사람들은 지금의 비누나 샴푸, 퐁퐁에 대응하는 물건으로 무엇을 사용했을까요?
 
-답변
+💁 답변
 
 그렇습니다.
-아雅가 세정제의 역사를 알지는 못하지만 적어도 그 시대에는 ...</p>
+아雅가 세정제의 역사를 알지는 못하지만 적어도 그 시...</p>
               </div>
             </a>
           </article>
