--- a/two-versions-of-misogyny/index.html
+++ b/two-versions-of-misogyny/index.html
@@ -535,9 +535,9 @@
               
               <div class="related-post-content">
                 <h3 class="related-post-title">한나라의 똑똑한 여자들은 어떻게 되었을까?</h3>
-                <p class="related-post-excerpt">질문
+                <p class="related-post-excerpt">🙋 질문
 
-한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며...</p>
+한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’...</p>
               </div>
             </a>
           </article>
