deploy: zya-han/zya-han.github.io-private@aab61e56e954c81cc5c0f4bee74eec2be5626b8d

--- a/change-vs-henge/index.html
+++ b/change-vs-henge/index.html
@@ -368,7 +368,7 @@
 동아시아 전통에서 ‘항아’는 달에 산다는 여신, 혹은 선녀를 가리킵니다.</p>
 
 <p>이 ‘항아’ 전설의 기원은 한나라에서 찾을 수 있습니다.
-바로 전한시대 초기의 제후왕 유안이 문하의 문인들과 함께 편찬한 《회남자》에, 항아<sup>姮娥</sup>가 예<sup>羿</sup>의 불사약을 훔쳐서 달로 달아났다는 일화가 나옵니다.
+바로 전한시대 초기의 제후왕 유안이 문하의 문인들과 함께 편찬한 《회남자》에, <span class="hanja-word" data-hanja="姮娥">항아</span>가 <span class="hanja-word" data-hanja="羿">예</span>의 불사약을 훔쳐서 달로 달아났다는 일화가 나옵니다.
 이것이 지금 알려진 것 중 가장 오래된 항아 이야기입니다.</p>
 
 <p>현대한국어를 쓰는 우리는 이 달의 여신을 ‘항아’라고 부릅니다.
@@ -376,38 +376,36 @@
 특히 궁 밖의 일반인들이 궁녀들을 ‘항아님’이라고 부르는 장면이 자주 나옵니다.</p>
 
 <p>항아는 고향인 중국에서 달을 대표하는 존재로 오랫동안 사랑을 받고 있습니다.
-심지어 중국에서 개발한 달 탐사 위성의 이름도 창어<sup>嫦娥</sup>라고 지었습니다.
+심지어 중국에서 개발한 달 탐사 위성의 이름도 <span class="hanja-word" data-hanja="嫦娥">창어</span>라고 지었습니다.
 그런데 자세히 보면 한자가 다릅니다.
-한국어에서는 항아<sup>姮娥</sup>인데, 중국어에서는 상아<sup>嫦娥</sup>인 것입니다.
+한국어에서는 <span class="hanja-word" data-hanja="姮娥">항아</span>인데, 중국어에서는 <span class="hanja-word" data-hanja="嫦娥">상아</span>인 것입니다.
 대체 어떻게 된 일일까요?</p>
 
 <p>가장 흔한 설명은 피휘 때문이라는 것입니다.
-달의 여신의 원래 이름은 항아<sup>姮娥</sup>였는데, ‘항<sup>姮</sup>’이 전한 문제 유항의 이름 ‘항<sup>恒</sup>’과 발음이 같은 탓에 상아<sup>嫦娥</sup>로 바뀌었다고 알려져 있습니다.
+달의 여신의 원래 이름은 <span class="hanja-word" data-hanja="姮娥">항아</span>였는데, ‘<span class="hanja-word" data-hanja="姮">항</span>’이 전한 문제 유항의 이름 ‘<span class="hanja-word" data-hanja="恒">항</span>’과 발음이 같은 탓에 <span class="hanja-word" data-hanja="嫦娥">상아</span>로 바뀌었다고 알려져 있습니다.
 <a href="https://namu.wiki/w/%ED%95%AD%EC%95%84">나무위키</a> 등지에서도 이 설을 그대로 가져다 쓰고 있습니다.
-실제로 중국의 5대 명산인 오악에 속하는 항산<sup>恒山</sup>의 이름이 문제의 피휘를 상산<sup>常山</sup>으로 바뀐 예가 있으므로, 이 설명은 꽤 그럴듯해 보입니다.
+실제로 중국의 5대 명산인 오악에 속하는 <span class="hanja-word" data-hanja="恒山">항산</span>의 이름이 문제의 피휘로 인해 <span class="hanja-word" data-hanja="常山">상산</span>으로 바뀐 예가 있으므로, 이 설명은 꽤 그럴듯해 보입니다.
 소설 《삼국연의》에서 조운이 ‘항산 조자룡’을 칭하지 않고 ‘상산 조자룡’을 칭한 것도 이 이유 때문입니다.</p>
 
 <p>하지만 ‘항아’가 피휘로 인해 ‘상아’로 바뀌었다는 설에는 약점이 있습니다.
-아<sup>雅</sup>가 강조하고 싶은 것은 항아/상아가 최초로 등장한 《회남자》에서 ‘항아’라는 이름을 썼다는 사실을 피휘설로 설명할 수 없다는 점입니다.
+<span class="hanja-word" data-hanja="雅">아</span>가 강조하고 싶은 것은 항아/상아가 최초로 등장한 《회남자》에서 ‘항아’라는 이름을 썼다는 사실을 피휘설로 설명할 수 없다는 점입니다.
 《회남자》를 편찬한 유안은 문제의 조카로 문제에 의해 회남왕으로 봉해졌습니다.
 문제의 이름을 피휘하기 위해 ‘상아’가 나왔다면, 유안이야말로 ‘상아’를 가장 먼저 썼을 것입니다.
 그런데 현재 확인할 수 있는 《회남자》의 본문에는 ‘상아’가 아닌 ‘항아’라고 적혀 있습니다.
 물론 후대의 편집 과정에서 변형되었을 가능성도 있으나, 유안이 ‘상아’를 썼다고 확신할 수 없는 이상 피휘설은 신빙성이 떨어집니다.
-이뿐만 아니라, 피휘설을 반박한 吴晓东(2021)의 연구에서는 역사음운론을 근거로 삼아 상<sup>嫦</sup>과 항<sup>姮</sup>의 어원이 아예 달랐다고 주장하기도 했습니다.</p>
+이뿐만 아니라, 피휘설을 반박한 吴晓东(2021)의 연구에서는 역사음운론을 근거로 삼아 <span class="hanja-word" data-hanja="嫦">상</span>과 <span class="hanja-word" data-hanja="姮">항</span>의 어원이 아예 달랐다고 주장하기도 했습니다.</p>
 
 <p>애초에 피휘설의 전제, 즉 한나라 이후에 ‘항아’가 사라지고 모두 ‘상아’로 바뀌었다는 것은 사실일까요? 확인하기 위해 <a href="https://ctext.org">Chinese Text Project</a>에서 검색해 보았습니다.</p>
 
-<p>우선 당나라 때 편찬된 백과사전 《예문유취》에서 상아<sup>嫦娥</sup>는 한 번도 나오지 않았고, 항아<sup>姮娥</sup>는 위진남북조 문인들의 글 위주로 열세 번 쓰였습니다. 송나라 때 편찬된 백과사전 《태평어람》에도 상아<sup>嫦娥</sup>는 송나라 사람 안연지의 시에 한 번 나온 것이 전부입니다. 즉, ‘항아’는 송나라 때까지 여전히 쓰이고 있었습니다.</p>
+<p>우선 당나라 때 편찬된 백과사전 《예문유취》에서 <span class="hanja-word" data-hanja="嫦娥">상아</span>는 한 번도 나오지 않았고, <span class="hanja-word" data-hanja="姮娥">항아</span>는 위진남북조 문인들의 글 위주로 열세 번 쓰였습니다. 송나라 때 편찬된 백과사전 《태평어람》에도 <span class="hanja-word" data-hanja="嫦娥">상아</span>는 송나라 사람 안연지의 시에 한 번 나온 것이 전부입니다. 즉, ‘항아’는 송나라 때까지 여전히 쓰이고 있었습니다.</p>
 
 <table>
   <thead>
     <tr>
       <th>조대</th>
       <th>백과사전</th>
-      <th>항아<sup>姮娥</sup>
-</th>
-      <th>상아<sup>嫦娥</sup>
-</th>
+      <th><span class="hanja-word" data-hanja="姮娥">항아</span></th>
+      <th><span class="hanja-word" data-hanja="嫦娥">상아</span></th>
     </tr>
   </thead>
   <tbody>
@@ -426,17 +424,15 @@
   </tbody>
 </table>
 
-<p>그렇다고 해서 당송시대에 ‘상아’가 아예 안 쓰인 것은 아닙니다. 시문을 실은 《전당시》와 《전송사》를 보면 항아<sup>姮娥</sup>와 상아<sup>嫦娥</sup>를 모두 수십 건씩 찾을 수 있습니다. 심지어 당나라 사람 이백은 자신의 시에서 항아<sup>姮娥</sup>도 쓰고 상아<sup>嫦娥</sup>도 썼습니다.</p>
+<p>그렇다고 해서 당송시대에 ‘상아’가 아예 안 쓰인 것은 아닙니다. 시문을 실은 《전당시》와 《전송사》를 보면 <span class="hanja-word" data-hanja="姮娥">항아</span>와 <span class="hanja-word" data-hanja="嫦娥">상아</span>를 모두 수십 건씩 찾을 수 있습니다. 심지어 당나라 사람 이백은 자신의 시에서 <span class="hanja-word" data-hanja="姮娥">항아</span>도 쓰고 <span class="hanja-word" data-hanja="嫦娥">상아</span>도 썼습니다.</p>
 
 <table>
   <thead>
     <tr>
       <th>조대</th>
       <th>문집</th>
-      <th>항아<sup>姮娥</sup>
-</th>
-      <th>상아<sup>嫦娥</sup>
-</th>
+      <th><span class="hanja-word" data-hanja="姮娥">항아</span></th>
+      <th><span class="hanja-word" data-hanja="嫦娥">상아</span></th>
     </tr>
   </thead>
   <tbody>
@@ -455,17 +451,15 @@
   </tbody>
 </table>
 
-<p>그런데 명청시대의 소설을 보면 항아<sup>姮娥</sup>를 거의 찾아볼 수 없습니다. 《서유기》에 두 번 나오기는 하지만, 달의 여신 항아가 아니라 항아선자<sup>姮娥仙子</sup>라는 인물을 가리킨 것이고, 달에 사는 여신은 일관되게 상아<sup>嫦娥</sup>로 지칭되었습니다. 그 외에 《봉신연의》와 《홍루몽》에서는 상아<sup>嫦娥</sup>라는 이름만 나옵니다.</p>
+<p>그런데 명청시대의 소설을 보면 <span class="hanja-word" data-hanja="姮娥">항아</span>를 거의 찾아볼 수 없습니다. 《서유기》에 두 번 나오기는 하지만, 달의 여신 항아가 아니라 <span class="hanja-word" data-hanja="姮娥仙子">항아선자</span>라는 인물을 가리킨 것이고, 달에 사는 여신은 일관되게 <span class="hanja-word" data-hanja="嫦娥">상아</span>로 지칭되었습니다. 그 외에 《봉신연의》와 《홍루몽》에서는 <span class="hanja-word" data-hanja="嫦娥">상아</span>라는 이름만 나옵니다.</p>
 
 <table>
   <thead>
     <tr>
       <th>조대</th>
       <th>소설</th>
-      <th>항아<sup>姮娥</sup>
-</th>
-      <th>상아<sup>嫦娥</sup>
-</th>
+      <th><span class="hanja-word" data-hanja="姮娥">항아</span></th>
+      <th><span class="hanja-word" data-hanja="嫦娥">상아</span></th>
     </tr>
   </thead>
   <tbody>
