--- a/hua-tuo-s-cream-mask/index.html
+++ b/hua-tuo-s-cream-mask/index.html
@@ -366,13 +366,13 @@
 
 <p>그런데, 이 화타가 피부에 생기를 돋우는 마스크팩을 개발했다고 하면 믿으시겠어요? 😲</p>
 
-<p>바로 《<a href="https://jicheng.tw/tcm/book/%E8%8F%AF%E4%BD%97%E7%A5%9E%E6%96%B9/index.html">화타신방<sup>華佗神方</sup></a>》이라고 하는 책에 크림팩을 만드는 방법이 실려 있는데요, 권14 〈<a href="https://jicheng.tw/tcm/book/%E8%8F%AF%E4%BD%97%E7%A5%9E%E6%96%B9/index.html#?t=H1%5B17%5D">화타피부과신방</a>〉에서 가장 먼저 나오는 처방을 살펴볼까요?</p>
+<p>바로 《<a href="https://jicheng.tw/tcm/book/%E8%8F%AF%E4%BD%97%E7%A5%9E%E6%96%B9/index.html"><span class="hanja-word" data-hanja="華佗神方">화타신방</span></a>》이라고 하는 책에 크림팩을 만드는 방법이 실려 있는데요, 권14 〈<a href="https://jicheng.tw/tcm/book/%E8%8F%AF%E4%BD%97%E7%A5%9E%E6%96%B9/index.html#?t=H1%5B17%5D">화타피부과신방</a>〉에서 가장 먼저 나오는 처방을 살펴볼까요?</p>
 
 <h3 id="화타신방-14-1-화타면고신방華佗面膏神方">《화타신방》 14-1. 화타면고신방(華佗面膏神方)</h3>
 
 <p>‘화타면고신방’은 ‘화타/면고/신방’으로 끊어 읽고, 화타의 면고 처방법이라고 해석할 수 있습니다.
-면고<sup>面膏</sup>란 무엇일까요?
-면<sup>面</sup>은 얼굴, 고<sup>膏</sup>는 기름을 뜻하는 만큼 ‘면고’는 얼굴에 바르는 연고가 되겠습니다.</p>
+<span class="hanja-word" data-hanja="面膏">면고</span>란 무엇일까요?
+<span class="hanja-word" data-hanja="面">면</span>은 얼굴, <span class="hanja-word" data-hanja="膏">고</span>는 기름을 뜻하는 만큼 ‘면고’는 얼굴에 바르는 연고가 되겠습니다.</p>
 
 <h4 id="면고-재료">면고 재료</h4>
 
@@ -380,18 +380,22 @@
 
 <blockquote>
   <ul>
-    <li>두형<sup>杜蘅</sup>, 두약<sup>杜若</sup>, 방풍<sup>防風</sup>, 고본<sup>藁本</sup>, 세신<sup>細辛</sup>, 백부자<sup>白附子</sup>, 목란피<sup>木蘭皮</sup>, 당귀<sup>當歸</sup>, 백출<sup>白朮</sup>, 독활<sup>獨活</sup>, 백복령<sup>白茯苓</sup>, 위유<sup>葳蕤</sup>, 백지<sup>白芷</sup>, 천문동<sup>天門冬</sup>, 옥설<sup>玉屑</sup> 각 1냥</li>
-    <li>토사자<sup>菟絲子</sup>, 방기<sup>防己</sup>, 상륙<sup>商陸</sup>, 치자화<sup>梔子花</sup>, 귤피<sup>橘皮</sup>, 동과인<sup>冬瓜仁</sup>, 미무화<sup>蘼蕪花</sup> 각 3냥</li>
-    <li>곽향<sup>藿香</sup>, 정향<sup>丁香</sup>, 영릉향<sup>零陵香</sup>, 감송향<sup>甘松香</sup>, 청목향<sup>青木香</sup> 각 2냥</li>
-    <li>사향<sup>麝香</sup> 반 냥</li>
-    <li>흰 거위의 기름<sup>白鵝脂</sup> 반 되</li>
-    <li>흰 양의 기름<sup>白羊脂</sup>, 소의 골수<sup>牛髓</sup> 각 한 냥</li>
-    <li>양??<sup>羊𦚠三具</sup> 세 개</li>
+    <li>
+<span class="hanja-word" data-hanja="杜蘅">두형</span>, <span class="hanja-word" data-hanja="杜若">두약</span>, <span class="hanja-word" data-hanja="防風">방풍</span>, <span class="hanja-word" data-hanja="藁本">고본</span>, <span class="hanja-word" data-hanja="細辛">세신</span>, <span class="hanja-word" data-hanja="白附子">백부자</span>, <span class="hanja-word" data-hanja="木蘭皮">목란피</span>, <span class="hanja-word" data-hanja="當歸">당귀</span>, <span class="hanja-word" data-hanja="白朮">백출</span>, <span class="hanja-word" data-hanja="獨活">독활</span>, <span class="hanja-word" data-hanja="白茯苓">백복령</span>, <span class="hanja-word" data-hanja="葳蕤">위유</span>, <span class="hanja-word" data-hanja="白芷">백지</span>, <span class="hanja-word" data-hanja="天門冬">천문동</span>, <span class="hanja-word" data-hanja="玉屑">옥설</span> 각 1냥</li>
+    <li>
+<span class="hanja-word" data-hanja="菟絲子">토사자</span>, <span class="hanja-word" data-hanja="防己">방기</span>, <span class="hanja-word" data-hanja="商陸">상륙</span>, <span class="hanja-word" data-hanja="梔子花">치자화</span>, <span class="hanja-word" data-hanja="橘皮">귤피</span>, <span class="hanja-word" data-hanja="冬瓜仁">동과인</span>, <span class="hanja-word" data-hanja="蘼蕪花">미무화</span> 각 3냥</li>
+    <li>
+<span class="hanja-word" data-hanja="藿香">곽향</span>, <span class="hanja-word" data-hanja="丁香">정향</span>, <span class="hanja-word" data-hanja="零陵香">영릉향</span>, <span class="hanja-word" data-hanja="甘松香">감송향</span>, <span class="hanja-word" data-hanja="青木香">청목향</span> 각 2냥</li>
+    <li>
+<span class="hanja-word" data-hanja="麝香">사향</span> 반 냥</li>
+    <li>흰 거위의 <span class="hanja-word" data-hanja="白鵝脂">기름</span> 반 되</li>
+    <li>흰 양의 <span class="hanja-word" data-hanja="白羊脂">기름</span>, 소의 <span class="hanja-word" data-hanja="牛髓">골수</span> 각 한 냥</li>
+    <li>양??羊𦚠三具 세 개</li>
   </ul>
 </blockquote>
 
 <p>목록을 자세히 보면 마지막 네 가지의 동물성 재료로 연고의 제형을 만들고, 나머지 스물여덟 가지 재료가 약효나 향을 내었으리라고 추측할 수 있습니다.
-그야말로 28종의 약재를 넣은 한방<sup>漢方</sup> 연고! 인 셈입니다.</p>
+그야말로 28종의 약재를 넣은 <span class="hanja-word" data-hanja="漢方">한방</span> 연고! 인 셈입니다.</p>
 
 <h4 id="면고-사용법">면고 사용법</h4>
 
